@@ -15,8 +15,8 @@
 <body <?php body_class(); ?>>
 <div class="head">
 <div class="head_content">
-<div class="logo"><div class="logo_pic"><a href="<?php echo esc_url(home_url('/')); ?>"><?php if ( zippy_of_get_option('logo') ) { ?>
-            <img src="<?php echo zippy_of_get_option('logo'); ?>" alt="<?php bloginfo('name'); ?>" />
+<div class="logo"><div class="logo_pic"><a href="<?php echo esc_url(home_url('/')); ?>"><?php if ( zippy_options_array('logo') ) { ?>
+            <img src="<?php echo zippy_options_array('logo'); ?>" alt="<?php bloginfo('name'); ?>" />
             <?php }else{ ?><span class="site-name"><?php bloginfo('name'); ?></span><?php }?></a>
 			</div>
 			<div class="tagline"><?php echo  get_bloginfo( 'description' );?></div>
